# NS-disruptions-pipeline

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: monitor_db.yaml  update_data.yaml
.streamlit/: config.toml
migration/: ns_disruptions_sqlite.db
src/crypto-data/: etl.py  etl_util.py  main.py
src/crypto_data/: etl.py  etl_util.py  main.py
src/crypto_data/apis/: coingecko_api.py
src/crypto_data/app/: crypto_data_app.py  requirements.txt
src/ns_disruptions/: config.py  etl.py  main.py  ns_util.py
src/ns_disruptions/_interfaces/: crypto_api.py
src/ns_disruptions/apis/: coingecko_api.py  ns_api.py
src/ns_disruptions/app/: index_page.py  requirements.txt
src/ns_disruptions/data_interfaces/: ns_dataclasses.py
src/ns_disruptions/monitor/: monitor.py  setup_monitor_db.py
src/ns_disruptions/queries/: aggregations.sql
src/ns_disruptions/setup/: aggregations.sql  queries.sql
tests/: test_ns_util.py
tests/resources/: ns_api_data.json
