[project]
name = "crypto-data"
version = "1.0.0"
description = "A datapipeline for automatically processing crypto data"
readme = "README.md"
requires-python = ">=3.9"
authors = [{"name" = "Satrya"}]

[tool.poetry]
packages = [
    { include = "crypto_data", from = "src" }
]

[tool.poetry.dependencies]
boto3 = "^1.38.22"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.2"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.meta"

[project.scripts]